# STAFF-FORM

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
main/main/: settings.py  urls.py
main/recruitment/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  web_urls.py
main/recruitment/migrations/: 0001_initial.py
main/recruitment/templates/recruitment/: base.html  detail.html  list.html
