[project]
name = "staff-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.13",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-storages[boto3,s3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "mysqlclient>=2.2.8",
    "python-decouple>=3.8",
    "whitenoise>=6.12.0",
]
